
    HDFS-8278. When computing max-size-to-move in Balancer, count only the
    storage with remaining >= default block size.  (szetszwo)

    HDFS-8435. Support CreateFlag in WebHDFS. (Jakob Homan via cdouglas)

    HDFS-8826. In Balancer, add an option to specify the source node list
    so that balancer only selects blocks to move from those nodes.  (szetszwo)

  OPTIMIZATIONS

    HDFS-8026. Trace FSOutputSummer#writeChecksumChunks rather than
    DFSOutputStream#writeChunk (cmccabe)

    HDFS-7433. Optimize performance of DatanodeManager's node map.
    (daryn via kihwal)

    HDFS-8792. BlockManager#postponedMisreplicatedBlocks should use a
    LightWeightHashSet to save memory (Yi Liu via Colin P. McCabe)

    HDFS-8845. DiskChecker should not traverse the entire tree (Chang Li via
    Colin P. McCabe)

    HDFS-8862. BlockManager#excessReplicateMap should use a HashMap. (yliu)

  BUG FIXES

    HDFS-7501. TransactionsSinceLastCheckpoint can be negative on SBNs.
    (Gautam Gopalakrishnan via harsh)

    HDFS-5356. MiniDFSCluster should close all open FileSystems when shutdown()
    (Rakesh R via vinayakumarb)

    HDFS-7867. Update action param from "start" to "prepare" in rolling upgrade
    javadoc (J.Andreina via vinayakumarb)

    HDFS-3325. When configuring "dfs.namenode.safemode.threshold-pct" to a value
    greater or equal to 1 there is mismatch in the UI report
    (J.Andreina via vinayakumarb)

    HDFS-8002. Website refers to /trash directory. (Brahma Reddy Battula via
    aajisaka)

    HDFS-7261. storageMap is accessed without synchronization in
    DatanodeDescriptor#updateHeartbeatState() (Brahma Reddy Battula via Colin
    P. McCabe)

    HDFS-7997. The first non-existing xattr should also throw IOException.
    (zhouyingchao via yliu)

    HDFS-7922. ShortCircuitCache#close is not releasing
    ScheduledThreadPoolExecutors (Rakesh R via Colin P. McCabe)

    HDFS-5215. dfs.datanode.du.reserved is not considered while computing